@@ -11,7 +11,6 @@ package org.eclipse.hawkbit.cache;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 import org.eclipse.hawkbit.tenancy.TenantAware;
 import org.springframework.cache.Cache;
@@ -24,61 +23,44 @@ import org.springframework.cache.CacheManager;
  * {@link TenantAware#getCurrentTenant()} when accessing a cache, so caches are
  * seperated.
  *
- * Additionally it also provide functionality to retrieve all caches overall
- * tenants at once, for monitoring and system access.
+ * Additionally, it also provides functionality to retrieve all caches overall tenants at once, for monitoring and system access.
  */
 public class TenantAwareCacheManager implements TenancyCacheManager {
 
     private static final String TENANT_CACHE_DELIMITER = "|";
 
     private final CacheManager delegate;
-
     private final TenantAware tenantAware;
 
     /**
      * Constructor.
      *
-     * @param delegate
-     *            the {@link CacheManager} to delegate to.
-     * @param tenantAware
-     *            the tenant aware to retrieve the current tenant
+     * @param delegate the {@link CacheManager} to delegate to.
+     * @param tenantAware the tenant aware to retrieve the current tenant
      */
     public TenantAwareCacheManager(final CacheManager delegate, final TenantAware tenantAware) {
-        this.tenantAware = tenantAware;
         this.delegate = delegate;
+        this.tenantAware = tenantAware;
     }
 
     @Override
     public Cache getCache(final String name) {
-        String currentTenant = tenantAware.getCurrentTenant();
+        final String currentTenant = tenantAware.getCurrentTenant();
         if (isTenantInvalid(currentTenant)) {
             return null;
         }
 
-        currentTenant = currentTenant.toUpperCase();
-
-        return delegate.getCache(buildKey(currentTenant, name));
+        return delegate.getCache(buildKey(currentTenant.toUpperCase(), name));
     }
 
     @Override
     public Collection<String> getCacheNames() {
-        String currentTenant = tenantAware.getCurrentTenant();
+        final String currentTenant = tenantAware.getCurrentTenant();
         if (isTenantInvalid(currentTenant)) {
             return Collections.emptyList();
         }
 
-        currentTenant = currentTenant.toUpperCase();
-
-        return getCacheNames(currentTenant);
-    }
-
-    /**
-     * A direct access for retrieving all cache names overall tenants.
-     *
-     * @return all cache names without tenant check
-     */
-    public Collection<String> getDirectCacheNames() {
-        return delegate.getCacheNames();
+        return getCacheNames(currentTenant.toUpperCase());
     }
 
     @Override
@@ -88,7 +70,16 @@ public class TenantAwareCacheManager implements TenancyCacheManager {
 
     @Override
     public void evictCaches(final String tenant) {
-        getCacheNames(tenant).forEach(cachename -> delegate.getCache(buildKey(tenant, cachename)).clear());
+        getCacheNames(tenant).forEach(cacheName -> delegate.getCache(buildKey(tenant, cacheName)).clear());
+    }
+
+    /**
+     * A direct-access for retrieving all cache names overall tenants.
+     *
+     * @return all cache names without tenant check
+     */
+    public Collection<String> getDirectCacheNames() {
+        return delegate.getCacheNames();
     }
 
     private static boolean isTenantInvalid(final String tenant) {
@@ -101,7 +92,9 @@ public class TenantAwareCacheManager implements TenancyCacheManager {
 
     private Collection<String> getCacheNames(final String tenant) {
         final String tenantWithDelimiter = tenant + TENANT_CACHE_DELIMITER;
-        return delegate.getCacheNames().parallelStream().filter(cacheName -> cacheName.startsWith(tenantWithDelimiter))
-                .map(cacheName -> cacheName.substring(tenantWithDelimiter.length())).collect(Collectors.toList());
+        return delegate.getCacheNames().parallelStream()
+                .filter(cacheName -> cacheName.startsWith(tenantWithDelimiter))
+                .map(cacheName -> cacheName.substring(tenantWithDelimiter.length()))
+                .toList();
     }
 }
