@@ -15,57 +15,46 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import lombok.Getter;
 import org.eclipse.hawkbit.repository.ValidString;
 import org.eclipse.hawkbit.repository.model.Action.Status;
-import org.springframework.util.StringUtils;
 
 /**
  * Create and update builder DTO.
  *
- * @param <T>
- *            update or create builder interface
+ * @param <T> update or create builder interface
  */
 public abstract class AbstractActionStatusCreate<T> {
 
     protected Status status;
-
     protected Long occurredAt;
-
     protected Integer code;
-
     protected List<@ValidString String> messages;
-
+    @Getter
     protected Long actionId;
-
-    public Long getActionId() {
-        return actionId;
-    }
 
     public T status(final Status status) {
         this.status = status;
-
         return (T) this;
     }
 
     public T occurredAt(final long occurredAt) {
         this.occurredAt = occurredAt;
-
         return (T) this;
     }
 
     public T code(final int code) {
         this.code = code;
-
         return (T) this;
     }
 
     public T messages(final Collection<String> messages) {
         if (this.messages == null) {
-            this.messages = messages.stream().map(StringUtils::trimWhitespace).collect(Collectors.toList());
+            // create modifiable list
+            this.messages = messages.stream().map(String::strip).collect(Collectors.toCollection(ArrayList::new));
         } else {
-            this.messages.addAll(messages.stream().map(StringUtils::trimWhitespace).collect(Collectors.toList()));
+            this.messages.addAll(messages.stream().map(String::strip).toList());
         }
-
         return (T) this;
     }
 
@@ -73,13 +62,11 @@ public abstract class AbstractActionStatusCreate<T> {
         if (this.messages == null) {
             this.messages = new ArrayList<>();
         }
-        this.messages.add(StringUtils.trimWhitespace(message));
-
+        this.messages.add(message.strip());
         return (T) this;
     }
 
     public Optional<Long> getOccurredAt() {
         return Optional.ofNullable(occurredAt);
     }
-
 }
